[package]
name = "cboe-pcap-replay"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
pcap = "1.3"
socket2 = "0.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
pnet = "0.35"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
num_cpus = "1.15"
core_affinity = "0.8"
dashmap = "5.4"
rand = "0.8"
nix = { version = "0.27", features = ["user"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3