[package]
name = "cboe-pcap-replay"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
pcap = "1.3"
socket2 = "0.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
pnet = "0.35"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
num_cpus = "1.15"
core_affinity = "0.8"
dashmap = "5.4"
rand = "0.8"
nix = { version = "0.27", features = ["user"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.5"
pcap-file = "2.0"
# Flux-inspired high-performance additions
memmap2 = "0.9"
smallvec = "1.11"
arrayvec = "0.7"
atomic = "0.6"
flume = "0.11"
rayon = "1.8"
# SIMD and memory optimizations
wide = "0.7"
# Additional performance dependencies
jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }
lazy_static = "1.4"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
overflow-checks = false
incremental = false

[features]
default = []
jemalloc = ["dep:jemallocator"]
mimalloc = ["dep:mimalloc"]
simd = []